# PaperDiag

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run.bat
paperdiag/: __init__.py  cli.py  embedding_layer.py  fusion.py  llm_diagnose.py  llm_rewriter.py  logger.py  model_manager.py  preprocessor.py  report.py  rule_rewriter.py  rules_engine.py  validator.py  webui.py
paperdiag/data/: antislop_patterns_zh.json  colloquial_dict.json  connector_blacklist.json  slop_patterns_zh.json  term_whitelist_cs.json  term_whitelist_econ.json  term_whitelist_edu.json  term_whitelist_law.json  term_whitelist_med.json
paperdiag/templates/: index.html
paperdiag/tests/: test_core.py  test_embedding.py
